# NZEA

./: .envrc  .gitignore  .gitmodules  .scalafmt.conf  AGENTS.md  Cargo.toml  Makefile  README.md  architecture.excalidraw  build.mill  compile_commands.json  flake.nix  justfile  mod.rs
.cursor/: BUILD_AND_RUN.md  DESIGN.md  README.md  RULES_AND_WARNINGS.md
.vibe/: ALLOC_BUG_ANALYSIS.md  MODULES.md  RENAME_PHASES.md
docs/: README.md
docs/architecture/: overview.md
docs/contributor/: rules.md  workflow.md
docs/history/: README.md
docs/typ/: README.md  utils.typ
docs/专业综合设计/: 5_23.typ  专业综合设计2025试卷-06.doc
hello/src/: Helloworld.scala
nzea_cli/src/: CliArgs.scala  Main.scala
nzea_config/src/: CoreConfig.scala  ElaborationTarget.scala  FuConfig.scala  FuKind.scala  IsaConfig.scala  NzeaConfig.scala  SynthPlatform.scala  WbSourceKind.scala
nzea_core/src/: Bus.scala  BusDpi.scala  Core.scala  CoreElaborate.scala  Elaborate.scala  GCD.scala  Pipe.scala  Top.scala  Util.scala  lib.scala
nzea_rtl/src/: Bus.scala  Pipe.scala  Util.scala
scripts/: common.tcl  default.sdc  sta.nu  sta.sh  sta.tcl  synth.nu  synth.sh  synth.ys  yosys.tcl
sdc/: default.sdc
src/: api.rs  area_parser.pest  bounded_channel.rs  lib.rs  main.rs  mod.rs  model.rs  simulator.rs
ssrc/: Makefile  build.sc  rename.scala
ssrc/BASYS/: key.scala
vsrc/: top.sv
wave_tracker/: ADDI_TRACE_REPORT.md  Cargo.toml  DEADLOCK_ANALYSIS.md  DEADLOCK_ANALYSIS_2.md  DEADLOCK_ROOT_CAUSE.md  PR2_BUG_TRACE_REPORT.md  README.md  T108_EXACT_TIMELINE_REPORT.md
wrapper/: wrapper.cpp  wrapper.h
(+261 files in other folders)
