[package]
name = "nzea"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[lib]
crate-type = ["cdylib"]

[dependencies]
remu_macro = { path = "../../../remu_macro" }
logger = { path = "../../../logger" }
state = { path = "../../../state" }
option_parser = { path = "../../../option_parser" }
dlopen2 = "0.7.0"

[build-dependencies]
cc = "1.0"
